fix Se cambia ubicación de los documentos html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="button-container">
-        <button class="api-button"><a href="/photos.html">Api Photos</a></button>
-        <button class="api-button"><a href="/weather.html">Api Weather</a></button>
-        <button class="api-button"><a href="/pokedex.html">Api Pokeapi</a></button>
+        <a href="/pages/photos.html"><button class="api-button">Api Photos</button></a>
+        <a href="/pages/weather.html"><button class="api-button">Api Weather</button></a>
+        <a href="/pages/pokedex.html"><button class="api-button">Api Pokeapi</button></a>
     </div>
 </body>
 </html>
